CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(example-c++)

#FIND_PACKAGE(LIBRARY)

INCLUDE_DIRECTORIES(
  ${LIBRARY_INCLUDE_DIR}
  ./eigen
)

#ADD_SUBDIRECTORY(src)

SET(SOURCE 
main.cpp
)
SET(CMAKE_CXX_FLAGS "-pthread -g -std=c++11")
ADD_EXECUTABLE(a.out ${SOURCE})

TARGET_LINK_LIBRARIES(a.out
  ${LIBRARY_LIBRARIES}
)
